# morphlings

./: Cargo.toml  clippy.toml
assets/: server-config.example.json
crates/morphlings-apis/: Cargo.toml
crates/morphlings-apis/src/: lib.rs
crates/morphlings-cli/: Cargo.toml
crates/morphlings-server/: Cargo.toml
crates/morphlings-server/src/: http.rs  main.rs  player.rs  resource.rs
crates/morphlings-server/src/html/: index.html
