[package]
name = "morphlings-server"
edition = "2024"

[dependencies]
axum = { workspace = true }
morphlings-apis = { workspace = true }
rand = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
